# SPAN-rtmri-artspeech

./: .gitignore  README.md  pyproject.toml
configs/speech2rtmri_artspeech/: default.yaml  full_database_grouille_a100_10h.yaml
scripts/: job_train_speech2rtmri_artspeech_full_database_grouille_a100_10h.sh  prepare_speech2rtmri_artspeech_cpu.sh  submit_train_speech2rtmri_artspeech_full_database_grouille_a100_10h_oar.sh
speech2rtmri_artspeech/: __init__.py  build_manifest.py  common.py  config.py  demo.py  demo_sessions.py  evaluate.py  extract_audio_embeddings.py  media.py  metrics.py  paths.py  report.py  reporting.py  train.py
speech2rtmri_artspeech/data/: __init__.py  audio.py  dataset.py  manifest.py
speech2rtmri_artspeech/models/: __init__.py  diffusion.py
tests/: test_config.py  test_manifest_and_dataset.py  test_metrics.py  test_path_mapping.py  test_reporting.py
