[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speech2rtmri-artspeech"
version = "0.1.0"
description = "ArtSpeech DB2 adaptation of Speech2rtMRI / SPAN-rtmri"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Workspace adaptation" }
]
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
  "torch>=2.1",
  "torchvision>=0.16",
  "transformers>=4.36",
  "librosa>=0.10",
  "TextGrid>=1.5",
  "Pillow>=9.0",
  "imageio>=2.34",
  "imageio-ffmpeg>=0.5",
  "soundfile>=0.12",
  "pandas>=2.0",
  "tqdm>=4.66",
  "torchmetrics>=1.2"
]

[project.optional-dependencies]
diffusion = [
  "imagen-pytorch==2.0.0",
  "ema-pytorch>=0.4.8",
  "accelerate>=0.30",
  "einops>=0.8"
]
dev = [
  "pytest>=8.0"
]

[tool.setuptools.packages.find]
include = ["speech2rtmri_artspeech*"]
